now-u/base/app-links/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: now-u-app-links
spec:
  selector:
    matchLabels:
      app: now-u-app-links
  replicas: 2
  template:
    metadata:
      labels:
        app: now-u-app-links
    spec:
      containers:
      - name: now-u-app-links
        image: ghcr.io/now-u/now-u-app-links
        ports:
        - containerPort: 9090
          name: http-svc
---
apiVersion: v1
kind: Service
metadata:
  name: now-u-app-links
  labels:
    app: now-u-app-links
spec:
  ports:
  - name: now-u-app-links-svc-port
    protocol: TCP
    port: 80
    targetPort: http-svc
  selector:
    app: now-u-app-links
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: now-u-app-links-ingress
  annotations:
     cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - links.now-u.com
    secretName: now-u-app-links-ingress-tls
  rules:
  - host: links.now-u.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: now-u-app-links
            port:
              number: 80
